--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/titleView"
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#FFFFFF"
-        android:text="dfdsf"
-        android:textScaleX="0.9"
-        android:fontFamily="@font/lato_bold"/>
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/menu_icon"
+            android:layout_width="21dp"
+            android:layout_height="24dp"
+            android:src="@drawable/menu_icon"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/notification_icon"
+            android:layout_width="18dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="34dp"
+            android:src="@drawable/notification_icon"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/menu_icon"
+            />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/titleView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textScaleX="0.9"
+            android:fontFamily="@font/lato_bold"
+            android:textSize="16sp"
+            android:layout_centerInParent="true"/>
+
+</RelativeLayout>
