--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -35,4 +35,14 @@
             android:textSize="16sp"
             android:layout_centerInParent="true"/>
 
+        <TextView
+            android:id="@+id/notification_icon"
+            android:layout_width="18dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="34dp"
+            android:src="@drawable/notification_icon"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/menu_icon"
+            />
+
 </RelativeLayout>
