--- a/app/src/main/res/layout/layout_taskview.xml
+++ b/app/src/main/res/layout/layout_taskview.xml
@@ -31,15 +31,16 @@
 
         </RelativeLayout>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/photo"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_centerVertical="true"
             android:src="@drawable/person"
+            app:civ_border_color="@android:color/darker_gray"
             android:layout_marginLeft="19dp"
-            android:background="@drawable/photo_frame"
-            />
+            app:civ_border_width="1dp" />
 
         <TextView
             android:id="@+id/name"
@@ -64,11 +65,11 @@
             android:src="@drawable/up_arrow"
             android:background="@drawable/photo_frame"
             android:layout_marginRight="3dp"
-            android:layout_toLeftOf="@+id/type"
+            android:layout_toLeftOf="@+id/taskTypeTextView"
             />
 
         <TextView
-            android:id="@+id/type"
+            android:id="@+id/taskTypeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
