--- a/app/src/main/res/drawable/passenger_call_button.xml
+++ b/app/src/main/res/drawable/passenger_call_button.xml
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="false">
-        <shape android:shape="oval">
-            <solid android:color="#ffffff"/>
-            <stroke android:width="7px" android:color="#51d792" />
-        </shape>
-    </item>
-    <item android:state_pressed="true">
-        <shape android:shape="oval">
-            <solid android:color="#51d792"/>
-            <stroke android:width="7px" android:color="#51d792" />
-        </shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/passenger_call_pressed_icon" android:state_pressed="true" />
+    <item android:drawable="@drawable/passenger_call_icon" android:state_pressed="false" />
 </selector>
