--- a/app/src/main/res/drawable/passenger_notfound_button.xml
+++ b/app/src/main/res/drawable/passenger_notfound_button.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="false">
-        <shape android:shape="oval">
-            <solid android:color="#ffffff"/>
-            <stroke android:width="7px" android:color="#d11a45" />
-        </shape>
-    </item>
-    <item android:state_pressed="true">
-        <shape android:shape="oval">
-            <solid android:color="#d11a45"/>
-            <stroke android:width="7px" android:color="#d11a45" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/passenger_notfound_pressed_icon" android:state_pressed="true" />
+    <item android:drawable="@drawable/passenger_notfound_icon" android:state_pressed="false" />
 </selector>
