--- a/app/src/main/res/drawable/start_pickup_button.xml
+++ b/app/src/main/res/drawable/start_pickup_button.xml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
-    <!-- you can use any color you want I used here gray color-->
-    <stroke android:width="4px" android:color="#51d792" />
-    <corners android:radius="20dp"/>
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape android:shape="rectangle" android:color="#51d792">
+        <stroke android:width="4px" android:color="#51d792" />
+        <corners android:radius="20dp"/>
+    </shape>
+</selector>
+
+<!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+
+    <!--<item android:state_pressed="true">-->
+        <!--<shape-->
+            <!--android:shape="rectangle" >-->
+            <!--<solid android:color="#51d792" />-->
+
+            <!--<corners android:radius="30dp"/>-->
+            <!--<stroke android:width="4px" android:color="#51d792" />-->
+
+        <!--</shape>-->
+    <!--</item>-->
+
+    <!--<item android:state_pressed="false" >-->
+        <!--<shape-->
+            <!--android:shape="rectangle" android:color="#ffffff">-->
+            <!--<stroke android:width="4px" android:color="#51d792" />-->
+            <!--<solid android:color="#ffffff" />-->
+            <!--<corners android:radius="20dp"/>-->
+        <!--</shape>-->
+    <!--</item>-->
+
+<!--</selector>-->
