--- a/app/src/main/res/drawable/start_pickup_button.xml
+++ b/app/src/main/res/drawable/start_pickup_button.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" android:color="#51d792">
+    <stroke android:width="4px" android:color="#51d792" />
+    <corners android:radius="20dp"/>
+</shape>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <shape android:shape="rectangle" android:color="#51d792">
-        <stroke android:width="4px" android:color="#51d792" />
-        <corners android:radius="20dp"/>
-    </shape>
-</selector>
+
 
 <!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
 
