--- a/app/src/main/res/drawable/login_button.xml
+++ b/app/src/main/res/drawable/login_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:color="#51d792">
-    <stroke android:width="4px" android:color="#51d792" />
+    android:shape="rectangle" android:color="#D11A45">
+    <stroke android:width="4px" android:color="#D11A45" />
     <corners android:radius="20dp"/>
 </shape>
